PP-01 Solve the error it was trowing, so the nested states are working now

--- a/app/common.html
+++ b/app/common.html
@@ -12,8 +12,8 @@
             <div class="top-menu">
             	<ul class="nav pull-right top-menu">
                     <!-- Login button -->
-                    <li><a class="logout" ui-shref="login">Ingresar</a></li>
-                    <li><a class="logout" ui-shref="sign-up">Crear cuenta</a></li>
+                    <li><a class="logout" ui-sref="login">Ingresar</a></li>
+                    <li><a class="logout" ui-sref="sign-up">Crear cuenta</a></li>
             	</ul>
             </div>
         </header>
@@ -27,7 +27,7 @@
       <!--main content start-->
           <section class="wrapper">
             <div class="container">
-                <div ui-view></div> <!-- Renders the page that is clicked -->
+                <div ui-view=""></div> <!-- Renders the page that is clicked -->
             </div>
           </section>
 
