--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 
   <body ng-app="promoPlatformApp" class="body">
 
-      <div ui-view=""></div>
+      <div ui-view></div>
 
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -69,6 +69,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -81,7 +82,7 @@
         <script src="scripts/controllers/sign-up.js"></script>
         <!-- endbuild -->
 
-        <script type="text/javascript" src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+   
 
 
   </body>
