PP-01 Create more views, including the add-product view and the create-shop

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,9 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
+    <script src="bower_components/bootstrap/js/ui-bootstrap-tpls-0.12.1.min"></script>
+    <script src="/bower_components/angular-i18n/angular-locale_es.js"></script><!--To change the language settings-->
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -80,7 +83,15 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/vendedor-home.js"></script>
         <script src="scripts/controllers/sign-up.js"></script>
+        <script src="scripts/controllers/add-product.js"></script>
+        <script src="scripts/controllers/subscription.js"></script>
+        <script src="scripts/controllers/create-shop.js"></script>
         <!-- endbuild -->
+        
+        <!--ui-bootstrap components-->
+        <script src="scripts/controllers/ui-bootstrap/modals/product-category-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/accordion/category-accordion.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/datepicker/expiration-date.js"></script>
 
    
 
