PP-01 Create the subscription modals, so the subscription part is one

--- a/app/common.html
+++ b/app/common.html
@@ -35,7 +35,7 @@
       <!--footer start-->
       <footer class="site-footer sticky-footer">
           <div class="text-center">
-            Camila Cardona -Leonardo Celis - David Garay</br>2015
+            Camila Cardona -Leonardo Celis</br>2015
           </div>
       </footer>
       <!--footer end-->
