--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,9 @@
         
         <!--ui-bootstrap components-->
         <script src="scripts/controllers/ui-bootstrap/modals/product-category-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/standard-subscription-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/professional-subscription-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/premium-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/accordion/category-accordion.js"></script>
         <script src="scripts/controllers/ui-bootstrap/datepicker/expiration-date.js"></script>
 
