PP-01 Create settings view and make some refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="styles/sticky-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/subscription.css">
     <link rel="stylesheet" type="text/css" href="styles/ui-bootstrap.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     
     <!-- Custom styles for this template -->
     <link href="bower_components/bootstrap/dist/css/style.css" rel="stylesheet">
@@ -87,6 +88,7 @@
         <script src="scripts/controllers/add-product.js"></script>
         <script src="scripts/controllers/subscription.js"></script>
         <script src="scripts/controllers/create-shop.js"></script>
+        <script src="scripts/controllers/settings.js"></script>
         <!-- endbuild -->
         
         <!--ui-bootstrap components-->
@@ -94,6 +96,7 @@
         <script src="scripts/controllers/ui-bootstrap/modals/standard-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/professional-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/premium-subscription-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/edit-password-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/accordion/category-accordion.js"></script>
         <script src="scripts/controllers/ui-bootstrap/datepicker/expiration-date.js"></script>
 
