PP-01 Create create-company, list-of-products, list-of-shops and do some refactor

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,9 @@
         <script src="scripts/controllers/subscription.js"></script>
         <script src="scripts/controllers/create-shop.js"></script>
         <script src="scripts/controllers/settings.js"></script>
+        <script src="scripts/controllers/create-company.js"></script>
+        <script src="scripts/controllers/list-of-shops.js"></script>
+        <script src="scripts/controllers/list-of-products.js"></script>
         <!-- endbuild -->
         
         <!--ui-bootstrap components-->
@@ -97,6 +100,7 @@
         <script src="scripts/controllers/ui-bootstrap/modals/professional-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/premium-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/edit-password-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/edit-shop-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/accordion/category-accordion.js"></script>
         <script src="scripts/controllers/ui-bootstrap/datepicker/expiration-date.js"></script>
 
