PP-01 Create edit-product view and modify other files

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/controllers/create-company.js"></script>
         <script src="scripts/controllers/list-of-shops.js"></script>
         <script src="scripts/controllers/list-of-products.js"></script>
+        <script src="scripts/controllers/edit-product.js"></script>
         <!-- endbuild -->
         
         <!--ui-bootstrap components-->
@@ -101,6 +102,7 @@
         <script src="scripts/controllers/ui-bootstrap/modals/premium-subscription-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/edit-password-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/modals/edit-shop-modal.js"></script>
+        <script src="scripts/controllers/ui-bootstrap/modals/edit-product-modal.js"></script>
         <script src="scripts/controllers/ui-bootstrap/accordion/category-accordion.js"></script>
         <script src="scripts/controllers/ui-bootstrap/datepicker/expiration-date.js"></script>
 
