PP-01 Create the last views, this are the request view, also the admin session

--- a/app/common.html
+++ b/app/common.html
@@ -12,6 +12,7 @@
             <div class="top-menu">
             	<ul class="nav pull-right top-menu">
                     <!-- Login button -->
+                    <li><a class="logout" ui-sref="admin-login" style="background-color:#1FBCD2; border-color:red ">Administrador</a></li>
                     <li><a class="logout" ui-sref="login">Ingresar</a></li>
                     <li><a class="logout" ui-sref="sign-up">Crear cuenta</a></li>
             	</ul>
