--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     
     <!-- Custom styles for this template -->
-    <link href="bower_components/bootstrap/dist/css/style.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/style-responsive.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/style-responsive.css" rel="stylesheet">
 
-    <script src="bower_components/bootstrap/dist/js/Chart.js"></script>
+    <script src="js/Chart.js"></script>
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -42,13 +42,13 @@
 
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/jquery-1.9.1.js"></script>
+    <script src="js/jquery-1.9.1.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script class="include" type="text/javascript" src="bower_components/bootstrap/dist/js/jquery.dcjqaccordion.2.7.js"></script>
-    <script src="bower_components/bootstrap/dist/js/jquery.scrollTo.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/jquery.nicescroll.js" type="text/javascript"></script>
-    <script src="bower_components/bootstrap/dist/js/jquery.sparkline.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/jquery.backstretch.min.js"></script>
+    <script class="include" type="text/javascript" src="js/jquery.dcjqaccordion.2.7.js"></script>
+    <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="js/jquery.sparkline.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
 
 
     <!--common script for all pages-->
