--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-base64/angular-base64.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -117,7 +118,10 @@
         <script src="scripts/controllers/ui-bootstrap/dropdown/request-dropdown.js"></script>
 
         <script src="bower_components/angular-i18n/angular-locale_es.js"></script><!--To change the language settings-->
-
+        
+        <!-- Services -->
+        <script src="services/authentication.js"></script>
+        <script src="services/manager.js"></script>
 
   </body>
 </html>
