PP-02 Add create managers functionality with callbacks and errors

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <!--external css-->
+    <link href="bower_components/sweetalert/lib/sweet-alert.css" rel="stylesheet">
       
   <!--  <link href="bower_components/bootstrap/dist/css/font-awesome.css" rel="stylesheet" /> Lo quite xq me estaba poniendo bullets en el menu-->  
     <link rel="stylesheet" type="styles/zabuto_calendar.css">
@@ -76,6 +77,11 @@
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-base64/angular-base64.js"></script>
+    <script src="bower_components/spin/javascripts/jquery.spin.js"></script>
+    <script src="bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+    <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
+    <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
