--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,9 @@
 	
        <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/ng-file-upload-shim/ng-file-upload-shim.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -82,6 +84,8 @@
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
     <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -126,8 +130,16 @@
         <script src="bower_components/angular-i18n/angular-locale_es.js"></script><!--To change the language settings-->
         
         <!-- Services -->
-        <script src="services/authentication.js"></script>
-        <script src="services/manager.js"></script>
+        <script src="scripts/services/authentication.js"></script>
+        <script src="scripts/services/manager.js"></script>
+        <script src="scripts/services/file-upload.js"></script>
+        <script src="scripts/services/shop.js"></script>
+        <script src="scripts/services/product.js"></script>
+        <script src="scripts/services/category.js"></script>
+        <script src="scripts/services/subscription.js"></script>
+      
+        <!-- Directives -->
+        <script src="scripts/directives/file-model.js"></script>
 
   </body>
 </html>
