--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="styles/sticky-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/subscription.css">
     <link rel="stylesheet" type="text/css" href="styles/ui-bootstrap.css">
+       <link rel="stylesheet" type="text/css" href="styles/sidebarcollapse.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     
     <!-- Custom styles for this template -->
