PP-03 Fix the sidebar from the vendedor-home file

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Dashboard">
     <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
 
-    <title>DASHGUM - FREE Bootstrap Admin Template</title>
+    <title>Promo App</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
@@ -21,9 +21,10 @@
     <link rel="stylesheet" type="text/css" href="styles/sticky-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/subscription.css">
     <link rel="stylesheet" type="text/css" href="styles/ui-bootstrap.css">
-       <link rel="stylesheet" type="text/css" href="styles/sidebarcollapse.css">
+    <link rel="stylesheet" type="text/css" href="styles/sidebarcollapse.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" type="text/css" href="styles/simple-sidebar.css">
+      
     <!-- Custom styles for this template -->
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/style-responsive.css" rel="stylesheet">
