Finish statistics views

--- a/app/common.html
+++ b/app/common.html
@@ -21,7 +21,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse top-menu" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a class="logout" ui-sref="admin-login">Administrador</a></li>
+            <li><a class="logout" ui-sref="informacion-publica">Información publica</a></li>
             <li><a class="logout" ui-sref="login">Ingresar</a></li>
             <li><a class="logout" ui-sref="sign-up">Crear cuenta</a></li>
           </ul>
@@ -30,9 +30,9 @@
       </div><!-- /.container-fluid -->
     </nav>
       <!--header end-->
-      
 
-      
+
+
       <!-- **********************************************************************************************************************************************************
       MAIN CONTENT
       *********************************************************************************************************************************************************** -->
