--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" type="text/css" href="styles/sidebarcollapse.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="styles/simple-sidebar.css">
+  <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
 
   <!-- Custom styles for this template -->
   <link href="styles/style.css" rel="stylesheet">
@@ -88,6 +89,8 @@
 <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
+<script src="bower_components/Chart.js/Chart.js"></script>
+<script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -113,10 +116,13 @@
 <script src="scripts/controllers/admin-request.js"></script>
 <script src="scripts/controllers/admin-complaint.js"></script>
 <script src="scripts/controllers/admin-claim.js"></script>
+<script src="scripts/controllers/detailed-statistics.js"></script>"
+<script src="scripts/controllers/statistics.js"></script>
 <!-- endbuild -->
 
 <!--ui-bootstrap components-->
 <script src="scripts/controllers/ui-bootstrap/modal/product-category-modal.js"></script>
+<script src="scripts/controllers/ui-bootstrap/modal/public-category-modal.js"></script>
 <script src="scripts/controllers/ui-bootstrap/modal/standard-subscription-modal.js"></script>
 <script src="scripts/controllers/ui-bootstrap/modal/professional-subscription-modal.js"></script>
 <script src="scripts/controllers/ui-bootstrap/modal/premium-subscription-modal.js"></script>
@@ -139,6 +145,7 @@
 <script src="scripts/services/product.js"></script>
 <script src="scripts/services/category.js"></script>
 <script src="scripts/services/subscription.js"></script>
+<script src="scripts/services/statistics.js"></script>
 
 <!-- Directives -->
 <script src="scripts/directives/file-model.js"></script>
