--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,6 @@
 
   <script src="js/Chart.js"></script>
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
 </head>
 
@@ -50,8 +45,9 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script class="include" type="text/javascript" src="js/jquery.dcjqaccordion.2.7.js"></script>
 <script src="js/jquery.scrollTo.min.js"></script>
-<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-<script src="js/jquery.sparkline.js"></script>
+<!-- Giving problems -->
+<!--<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+<script src="js/jquery.sparkline.js"></script>-->
 <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
 
 
